--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "copy-of-audio-orb",
+  "name": "nexora-ai-voice-assistant",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "[https://mahdi-soleimani.github.io/NexoraAIVoiceAssistant](https://mahdi-soleimani.github.io/NexoraAIVoiceAssistant)",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "lit": "^3.3.0",
-    "@lit/context": "^1.1.5",
     "@google/genai": "^1.15.0",
+    "@lit/context": "^1.1.5",
+    "lit": "^3.3.0",
     "three": "^0.176.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
